tests/semantic/invalid/argument_count_mismatch.src
fn add(int a, int b) -> int {
    return a + b;
}

fn main() -> int {
    int result = add(5);
    return 0;
}
